<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="true_btn_string">True</string>
    <string name="false_btn_string">False</string>
    <string name="prev_btn_string">Prev</string>
    <string name="next_btn_string">Next</string>

    <string name="question_australia">Canberra is the capital of Australia.</string>
    <string name="question_oceans">The Pacific Ocean is larger than
the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea
and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the longest river
in the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest
freshwater lake.</string>
    <string name="correct_string">
        GoodJob!
    </string>
    <string name="incorrect_string">
        Uhm....!
    </string>

    <string name="warning_text">
        Are you sure you want to do this?
    </string>
    <string name="show_answer_button">
        Show Answer
    </string>
    <string name="cheat_button">Cheat!</string>
    <string name="judgement_toast">Cheating is wrong.</string>

</resources>
